--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<h1>TRIAL</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Science Expo 2024-25</title>
+    <link rel="stylesheet" href="style.css">
+
+    <style>
+        body {
+    background: linear-gradient(120deg,#2980b9, #8e44ad);
+    align-items: center;
+}
+h1{
+    text-align: center;
+    font-family: Bogle;
+    font-size: 100px;
+    color: white;
+}
+
+.img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+    </style>
+</head>
+<body>
+    <h1>Science Expo 2024-25</h1>
+    <img src="pic.jpg" class="img">
+</body>
+</html>
